# spinlock

./: README.md
scr/: CMakeLists.txt  spinlock.cpp  spinlock.hpp
tests/: CMakeLists.txt  tests.cpp
